# buy-the-dip

./: .gitignore  README.md
backend/: .env.example  Makefile  pyproject.toml
backend/app/: cli.py  config.py  db.py  main.py  models.py  seed.py
backend/app/agent/: loop.py  prompts.py  recommendation_prompt.py  tools.py
backend/app/api/: http.py  ws.py
backend/app/services/: alpaca_service.py  monitor_service.py  news_service.py  portfolio_service.py  proposal_service.py  recommendation_service.py  sell_service.py
backend/tests/: conftest.py  test_agent_loop.py  test_alpaca_service.py  test_models.py  test_monitor_service.py  test_news_service.py  test_portfolio_api.py  test_portfolio_service.py  test_proposal_service.py  test_recommendation_api.py  test_recommendation_service.py  test_sell_endpoints.py  test_tools.py  test_ws_emit.py  test_ws_limits.py
backend/tests/fixtures/: aapl_chain.json  aapl_news.json  general_news.json  portfolio_history_1m.json  recommendation_response.json
backend/trading_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: architecture.md
docs/superpowers/plans/: 2026-05-04-trading-agent-poc.md  2026-05-05-hot-news-recommendations.md  2026-05-05-market-brief-banner.md  2026-05-05-portfolio-composition-view.md  2026-05-05-sell-positions-with-auto-rules.md
docs/superpowers/specs/: 2026-05-05-hot-news-recommendations-design.md  2026-05-05-market-brief-banner-design.md  (+1 more)
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx  (+2 more)
mockups/: a-terminal.html  b-editorial.html  c-brutalist.html  index.html
(+34 files in other folders)
