[project]
name = "trading-agent-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlmodel>=0.0.22",
  "anthropic>=0.40",
  "alpaca-py>=0.30",
  "finnhub-python>=2.4",
  "httpx>=0.27",
  "pydantic-settings>=2.5",
  "python-dotenv>=1.0",
  "websockets>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "respx>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
